--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - name: pulling repository
         uses: actions/checkout@v2
-      
+      -name: set up python
+        run: echo "hello"
        
