--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,4 +8,7 @@ jobs:
         uses: actions/checkout@v2
       - name: set up python
         run: sudo apt install python3
+        run: python3
+        run: print("hello world")
+        run: exit()
        
