--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,10 @@ jobs:
         uses: actions/checkout@v2
       - name: set up python
         run: sudo apt install python3
+      - name: python mode
         run: python3
-        run: print("hello world")
-        run: exit()
+      - name: print 
+        run: print("hello")
+
+        
        
