--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Social App github action workflow
+
 on: [push]
+
 jobs:
+
   job1:
     runs-on: ubuntu-latest
     steps:
@@ -8,10 +11,10 @@ jobs:
         uses: actions/checkout@v2
       - name: set up python
         run: sudo apt install python3
-      - name: python mode
-        run: python3
-      - name: print 
-        run: print("hello")
+      - name: update pip
+        run: python3 -m pip install --upgrade pip
+      - name: install all dependencies
+        run: pip install -r requirements.txt
 
         
        
