--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
         run: python3 -m pip install --upgrade pip
       - name: install all dependencies
         run: pip install -r requirements.txt
+      - name: run pytest for testing
+        run: pytest
 
         
        
