postgres set up for github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,23 @@ jobs:
       ALGORITHM: ${{secrets.ALGORITHM}}
       SECRET_KEY: ${{secrets.SECRET_KEY}}
       EXPIRY_TIME: ${{secrets.EXPIRY_TIME}}
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: passsword123
+          POSTGRES_DB: app-social_test
+        ports:
+        - 5432:5432
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     runs-on: ubuntu-latest
     steps:
       - name: pulling repository
